--- a/trans_scripts.yml
+++ b/trans_scripts.yml
@@ -1,82 +1,77 @@
 name: trans_scripts
 channels:
-- anaconda
-- conda-forge
-- defaults
+  - anaconda
+  - defaults
 dependencies:
-- libtiff=4.1.0=h2733197_0
-- olefile=0.46=py_0
-- pillow=7.0.0=py38hb39fc2d_0
-- zstd=1.3.7=h0b5b093_0
-- _libgcc_mutex=0.1=conda_forge
-- _openmp_mutex=4.5=0_gnu
-- cloudpickle=1.2.2=py_1
-- cytoolz=0.10.1=py38h516909a_0
-- dask-core=2.9.2=py_0
-- decorator=4.4.1=py_0
-- fontconfig=2.13.1=h86ecdb6_1001
-- gst-plugins-base=1.14.5=h0935bb2_0
-- gstreamer=1.14.5=h36ae1b5_0
-- icu=64.2=he1b5a44_1
-- imageio=2.6.1=py38_0
-- jpeg=9c=h14c3975_1001
-- libblas=3.8.0=14_openblas
-- libcblas=3.8.0=14_openblas
-- libgcc-ng=9.2.0=h24d8f2e_2
-- libgomp=9.2.0=h24d8f2e_2
-- liblapack=3.8.0=14_openblas
-- libopenblas=0.3.7=h5ec1e0e_6
-- libuuid=2.32.1=h14c3975_1000
-- matplotlib=3.1.2=py38_1
-- matplotlib-base=3.1.2=py38h250f245_1
-- networkx=2.4=py_0
-- pywavelets=1.1.1=py38hc1659b7_0
-- qt=5.9.7=h0c104cb_3
-- scikit-image=0.16.2=py38hb3f55d8_0
-- scipy=1.4.1=py38h921218d_0
-- tk=8.6.10=hed695b0_0
-- toolz=0.10.0=py_0
-- blas=1.0=mkl
-- ca-certificates=2019.11.27=0
-- certifi=2019.11.28=py38_0
-- cycler=0.10.0=py38_0
-- dbus=1.13.12=h746ee38_0
-- expat=2.2.6=he6710b0_0
-- freetype=2.9.1=h8a8886c_1
-- glib=2.63.1=h5a9c865_0
-- intel-openmp=2019.4=243
-- kiwisolver=1.0.1=py38he6710b0_0
-- ld_impl_linux-64=2.33.1=h53a641e_7
-- libedit=3.1.20181209=hc058e9b_0
-- libffi=3.2.1=hd88cf55_4
-- libgfortran-ng=7.3.0=hdf63c60_0
-- libpng=1.6.37=hbc83047_0
-- libstdcxx-ng=9.1.0=hdf63c60_0
-- libxcb=1.13=h1bed415_1
-- libxml2=2.9.9=hea5a465_1
-- mkl=2019.4=243
-- mkl-service=2.3.0=py38he904b0f_0
-- mkl_fft=1.0.15=py38ha843d7b_0
-- mkl_random=1.1.0=py38h962f231_0
-- ncurses=6.1=he6710b0_1
-- numpy=1.18.1=py38h4f9e942_0
-- numpy-base=1.18.1=py38hde5b4d6_1
-- openssl=1.1.1d=h7b6447c_3
-- pcre=8.43=he6710b0_0
-- pip=19.3.1=py38_0
-- pyparsing=2.4.6=py_0
-- pyqt=5.9.2=py38h05f1152_4
-- python=3.8.1=h0371630_1
-- python-dateutil=2.8.1=py_0
-- pytz=2019.3=py_0
-- readline=7.0=h7b6447c_5
-- setuptools=44.0.0=py38_0
-- sip=4.19.8=py38he6710b0_0
-- six=1.13.0=py38_0
-- sqlite=3.30.1=h7b6447c_0
-- tornado=6.0.3=py38h7b6447c_0
-- wheel=0.33.6=py38_0
-- xz=5.2.4=h14c3975_4
-- zlib=1.2.11=h7b6447c_3
-prefix: /home/astria/miniconda3/envs/trans_scripts
+  - _libgcc_mutex=0.1=main
+  - blas=1.0=mkl
+  - ca-certificates=2020.1.1=0
+  - certifi=2019.11.28=py37_0
+  - cloudpickle=1.2.2=py_0
+  - cycler=0.10.0=py37_0
+  - cytoolz=0.10.1=py37h7b6447c_0
+  - dask-core=2.9.2=py_0
+  - dbus=1.13.12=h746ee38_0
+  - decorator=4.4.1=py_0
+  - expat=2.2.6=he6710b0_0
+  - fontconfig=2.13.0=h9420a91_0
+  - freetype=2.9.1=h8a8886c_1
+  - glib=2.56.2=hd408876_0
+  - gst-plugins-base=1.14.0=hbbd80ab_1
+  - gstreamer=1.14.0=hb453b48_1
+  - icu=58.2=h211956c_0
+  - imageio=2.6.1=py37_0
+  - intel-openmp=2019.5=281
+  - jpeg=9b=habf39ab_1
+  - kiwisolver=1.1.0=py37he6710b0_0
+  - ld_impl_linux-64=2.33.1=h53a641e_7
+  - libedit=3.1.20181209=hc058e9b_0
+  - libffi=3.2.1=hd88cf55_4
+  - libgcc-ng=9.1.0=hdf63c60_0
+  - libgfortran-ng=7.3.0=hdf63c60_0
+  - libpng=1.6.37=hbc83047_0
+  - libstdcxx-ng=9.1.0=hdf63c60_0
+  - libtiff=4.1.0=h2733197_0
+  - libuuid=1.0.3=h1bed415_2
+  - libxcb=1.13=h1bed415_1
+  - libxml2=2.9.9=hea5a465_1
+  - matplotlib=3.1.1=py37h5429711_0
+  - mkl=2019.5=281
+  - mkl-service=2.3.0=py37he904b0f_0
+  - mkl_fft=1.0.15=py37ha843d7b_0
+  - mkl_random=1.1.0=py37hd6b4f25_0
+  - ncurses=6.1=he6710b0_1
+  - networkx=2.4=py_0
+  - numpy=1.18.1=py37h4f9e942_0
+  - numpy-base=1.18.1=py37hde5b4d6_1
+  - olefile=0.46=py37_0
+  - openssl=1.1.1d=h7b6447c_3
+  - pcre=8.43=he6710b0_0
+  - pillow=7.0.0=py37hb39fc2d_0
+  - pip=20.0.2=py37_1
+  - pyparsing=2.4.6=py_0
+  - pyqt=5.9.2=py37h22d08a2_1
+  - python=3.7.6=h0371630_2
+  - python-dateutil=2.8.1=py_0
+  - pytz=2019.3=py_0
+  - pywavelets=1.1.1=py37h7b6447c_0
+  - qt=5.9.7=h5867ecd_1
+  - readline=7.0=h7b6447c_5
+  - scikit-image=0.15.0=py37he6710b0_0
+  - scipy=1.3.2=py37h7c811a0_0
+  - setuptools=45.1.0=py37_0
+  - sip=4.19.13=py37he6710b0_0
+  - six=1.14.0=py37_0
+  - sqlite=3.30.1=h7b6447c_0
+  - tk=8.6.8=hbc83047_0
+  - toolz=0.10.0=py_0
+  - tornado=6.0.3=py37h7b6447c_0
+  - wheel=0.33.6=py37_0
+  - xz=5.2.4=h14c3975_4
+  - zlib=1.2.11=h7b6447c_3
+  - zstd=1.3.7=h0b5b093_0
+  - pip:
+    - imagecodecs-lite==2019.12.3
+    - tifffile==2019.7.26.2
+prefix: /home/astria/.conda/envs/trans_scripts
 
