--- a/trans_scripts.yml
+++ b/trans_scripts.yml
@@ -71,7 +71,49 @@ dependencies:
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.3.7=h0b5b093_0
   - pip:
+    - attrs==19.3.0
+    - backcall==0.1.0
+    - bleach==3.1.0
+    - defusedxml==0.6.0
+    - entrypoints==0.3
     - imagecodecs-lite==2019.12.3
+    - importlib-metadata==1.5.0
+    - ipykernel==5.1.4
+    - ipython==7.12.0
+    - ipython-genutils==0.2.0
+    - ipywidgets==7.5.1
+    - jedi==0.16.0
+    - jinja2==2.11.1
+    - jsonschema==3.2.0
+    - jupyter==1.0.0
+    - jupyter-client==5.3.4
+    - jupyter-console==6.1.0
+    - jupyter-core==4.6.2
+    - markupsafe==1.1.1
+    - mistune==0.8.4
+    - nbconvert==5.6.1
+    - nbformat==5.0.4
+    - notebook==6.0.3
+    - pandocfilters==1.4.2
+    - parso==0.6.1
+    - pexpect==4.8.0
+    - pickleshare==0.7.5
+    - prometheus-client==0.7.1
+    - prompt-toolkit==3.0.3
+    - psf==2020.1.1
+    - ptyprocess==0.6.0
+    - pygments==2.5.2
+    - pyrsistent==0.15.7
+    - pyzmq==18.1.1
+    - qtconsole==4.6.0
+    - send2trash==1.5.0
+    - terminado==0.8.3
+    - testpath==0.4.4
     - tifffile==2019.7.26.2
+    - traitlets==4.3.3
+    - wcwidth==0.1.8
+    - webencodings==0.5.1
+    - widgetsnbextension==3.5.1
+    - zipp==2.2.0
 prefix: /home/astria/.conda/envs/trans_scripts
 
