--- a/trans_scripts.yml
+++ b/trans_scripts.yml
@@ -114,7 +114,9 @@ dependencies:
   - zstd=1.3.7=h0b5b093_0
   - pip:
     - imagecodecs==2020.2.18
+    - pandas==1.0.1
     - psf==2020.1.1
+    - pytz==2019.3
     - tifffile==2020.2.16
 prefix: /home/astria/.conda/envs/flowdec
 
