--- a/trans_scripts.yml
+++ b/trans_scripts.yml
@@ -113,10 +113,18 @@ dependencies:
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.3.7=h0b5b093_0
   - pip:
+    - apptools==4.5.0
+    - configobj==5.0.6
+    - envisage==4.9.2
     - imagecodecs==2020.2.18
     - pandas==1.0.1
     - psf==2020.1.1
+    - pyface==6.1.2
+    - pygments==2.6.1
     - pytz==2019.3
     - tifffile==2020.2.16
+    - traits==6.0.0
+    - traitsui==6.1.3
+    - vtk==8.1.2
 prefix: /home/astria/.conda/envs/flowdec
 
