--- a/trans_scripts.yml
+++ b/trans_scripts.yml
@@ -1,4 +1,4 @@
-name: flowdec
+name: trans_scripts
 channels:
   - conda-forge
   - defaults
@@ -10,9 +10,9 @@ dependencies:
   - blas=1.0=mkl
   - blinker=1.4=py_1
   - c-ares=1.15.0=h516909a_1001
-  - ca-certificates=2020.1.1=0
+  - ca-certificates=2020.7.22=0
   - cachetools=3.1.1=py_0
-  - certifi=2019.11.28=py36_0
+  - certifi=2020.6.20=py36_0
   - cffi=1.13.2=py36h8022711_0
   - chardet=3.0.4=py36_1003
   - click=7.0=py_0
@@ -27,7 +27,7 @@ dependencies:
   - fontconfig=2.13.0=h9420a91_0
   - freetype=2.9.1=h8a8886c_1
   - gast=0.2.2=py_0
-  - glib=2.63.1=h5a9c865_0
+  - glib=2.56.2=hd408876_0
   - google-auth=1.11.2=py_0
   - google-auth-oauthlib=0.4.1=py_2
   - google-pasta=0.1.8=py_0
@@ -36,17 +36,16 @@ dependencies:
   - gstreamer=1.14.0=hb453b48_1
   - h5py=2.10.0=nompi_py36h513d04c_102
   - hdf5=1.10.5=nompi_h3c11f04_1104
-  - icu=58.2=h9c2bf20_1
+  - icu=58.2=he6710b0_3
   - idna=2.9=py_1
   - imageio=2.6.1=py36_0
   - intel-openmp=2020.0=166
   - jpeg=9b=h024ee3a_2
-  - keras-applications=1.0.8=py_1
   - keras-preprocessing=1.1.0=py_0
   - kiwisolver=1.1.0=py36he6710b0_0
   - ld_impl_linux-64=2.33.1=h53a641e_7
   - libedit=3.1.20181209=hc058e9b_0
-  - libffi=3.2.1=hd88cf55_4
+  - libffi=3.2.1=hf484d3e_1007
   - libgcc-ng=9.1.0=hdf63c60_0
   - libgfortran-ng=7.3.0=hdf63c60_0
   - libpng=1.6.37=hbc83047_0
@@ -61,19 +60,19 @@ dependencies:
   - matplotlib-base=3.1.3=py36hef1b27d_0
   - mkl=2020.0=166
   - mkl-service=2.3.0=py36he904b0f_0
-  - mkl_fft=1.0.15=py36ha843d7b_0
+  - mkl_fft=1.2.0=py36h23d657b_0
   - mkl_random=1.1.0=py36hd6b4f25_0
   - ncurses=6.1=he6710b0_1
   - networkx=2.4=py_0
-  - numpy=1.18.1=py36h4f9e942_0
-  - numpy-base=1.18.1=py36hde5b4d6_1
+  - numpy=1.19.1=py36hbc911f0_0
+  - numpy-base=1.19.1=py36hfa32c7d_0
   - oauthlib=3.0.1=py_0
   - olefile=0.46=py36_0
-  - openssl=1.1.1d=h7b6447c_4
+  - openssl=1.1.1h=h7b6447c_0
   - opt_einsum=3.1.0=py_0
   - pcre=8.43=he6710b0_0
   - pillow=7.0.0=py36hb39fc2d_0
-  - pip=20.0.2=py36_1
+  - pip=20.2.2=py36_0
   - protobuf=3.8.0=py36he1b5a44_2
   - pyasn1=0.4.8=py_0
   - pyasn1-modules=0.2.7=py_0
@@ -92,15 +91,12 @@ dependencies:
   - requests-oauthlib=1.2.0=py_0
   - rsa=4.0=py_0
   - scikit-image=0.16.2=py36h0573a6f_0
-  - scipy=1.4.1=py36h0b6359f_0
+  - scipy=1.5.2=py36h0b6359f_0
   - setuptools=45.2.0=py36_0
   - sip=4.19.8=py36hf484d3e_0
   - six=1.14.0=py36_0
   - sqlite=3.31.1=h7b6447c_0
   - tensorboard=2.1.0=py3_0
-  - tensorflow=2.1.0=mkl_py36h23468d9_0
-  - tensorflow-base=2.1.0=mkl_py36h6d63fb7_0
-  - tensorflow-estimator=2.1.0=pyhd54b08b_0
   - termcolor=1.1.0=py_2
   - tk=8.6.8=hbc83047_0
   - toolz=0.10.0=py_0
@@ -113,18 +109,9 @@ dependencies:
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.3.7=h0b5b093_0
   - pip:
-    - apptools==4.5.0
-    - configobj==5.0.6
-    - envisage==4.9.2
     - imagecodecs==2020.2.18
     - pandas==1.0.1
-    - psf==2020.1.1
-    - pyface==6.1.2
-    - pygments==2.6.1
     - pytz==2019.3
+    - pyyaml==5.3.1
     - tifffile==2020.2.16
-    - traits==6.0.0
-    - traitsui==6.1.3
-    - vtk==8.1.2
-prefix: /home/astria/.conda/envs/flowdec
-
+prefix: /home/manager/anaconda3/envs/trans_scripts
