--- a/trans_scripts.yaml
+++ b/trans_scripts.yaml
@@ -10,13 +10,14 @@ dependencies:
   - blas=1.0=mkl
   - blinker=1.4=py_1
   - c-ares=1.15.0=h516909a_1001
-  - ca-certificates=2020.7.22=0
+  - ca-certificates=2020.12.5=ha878542_0
   - cachetools=3.1.1=py_0
-  - certifi=2020.6.20=py36_0
+  - certifi=2020.12.5=py36h5fab9bb_0
   - cffi=1.13.2=py36h8022711_0
   - chardet=3.0.4=py36_1003
   - click=7.0=py_0
   - cloudpickle=1.3.0=py_0
+  - confuse=1.4.0=pyhd3deb0d_0
   - cryptography=2.8=py36h72c5cf5_1
   - cycler=0.10.0=py36_0
   - cytoolz=0.10.1=py36h7b6447c_0
@@ -68,7 +69,7 @@ dependencies:
   - numpy-base=1.19.1=py36hfa32c7d_0
   - oauthlib=3.0.1=py_0
   - olefile=0.46=py36_0
-  - openssl=1.1.1h=h7b6447c_0
+  - openssl=1.1.1h=h516909a_0
   - opt_einsum=3.1.0=py_0
   - pcre=8.43=he6710b0_0
   - pillow=7.0.0=py36hb39fc2d_0
@@ -84,6 +85,7 @@ dependencies:
   - pysocks=1.7.1=py36_0
   - python=3.6.10=h0371630_0
   - python-dateutil=2.8.1=py_0
+  - python_abi=3.6=1_cp36m
   - pywavelets=1.1.1=py36h7b6447c_0
   - qt=5.9.7=h5867ecd_1
   - readline=7.0=h7b6447c_5
@@ -106,6 +108,7 @@ dependencies:
   - wheel=0.34.2=py36_0
   - wrapt=1.12.0=py36h516909a_0
   - xz=5.2.4=h14c3975_4
+  - yaml=0.2.5=h516909a_0
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.3.7=h0b5b093_0
   - pip:
